# simple-eff

./: README.md  pyproject.toml
examples/: logging.py  logging_decorator.py  sum_lines.py
simple_eff/: __init__.py
tests/: test_simple_eff.py
