[tool.poetry]
name = "simple-eff"
version = "0.0.1"
description = "A simple tiny algebraic effects library for Python"
authors = ["Catminusminus <getomya@svk.jp>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
