[tool.poetry]
name = "simple-eff"
version = "0.0.1a3"
description = "A simple tiny algebraic effects library for Python"
authors = ["Catminusminus <getomya@svk.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"
flake8 = "^5.0.4"
flake8-bugbear = "^22.8.23"
pep8-naming = "^0.13.2"
safety = "^2.1.1"
flake8-comprehensions = "^3.10.0"
pytest-cov = "^3.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
